--- a/TaskList/App.config
+++ b/TaskList/App.config
@@ -3,4 +3,6 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-<connectionStrings><add name="TaskListDB" connectionString="data source=DESKTOP-2H8UQPU\SQLEXPRESS;initial catalog=TaskListDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings>
+       <add name="TaskListDB" connectionString="data source=DESKTOP-2H8UQPU\SQLEXPRESS;initial catalog=TaskListDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+</configuration>
