DB + routes between Pages added

--- a/TaskList/TaskList.csproj
+++ b/TaskList/TaskList.csproj
@@ -82,9 +82,7 @@
     <Compile Include="Pages\RegisterDetailsPage.xaml.cs">
       <DependentUpon>RegisterDetailsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Task.cs" />
-    <Compile Include="TaskListDB.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="TaskView.cs" />
     <Page Include="BlueTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -142,5 +140,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
